kubernetes/apps/downloads/maintainerr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: maintainerr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: maintainerr
  egress:
    # plex
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
            k8s:io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP

    # overseerr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: overseerr
            k8s:io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "5055"
              protocol: TCP

    # sonarr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
            k8s:io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP

    # radarr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
            k8s:io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP

    # jellyseerr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: jellyseerr
            k8s:io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "5055"
              protocol: TCP

    # tautulli
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tautulli
            k8s:io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "8181"
              protocol: TCP

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
            k8s:io.kubernetes.pod.namespace: media
        - matchLabels:
            app.kubernetes.io/name: overseerr
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: jellyseerr
            k8s:io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "6246"
              protocol: TCP
